<resources>

    <!-- TODO: Remove or change this placeholder text -->
    <!-- TODO: Remove or change this placeholder text -->
    <string name="app_name">Login_ViewPager</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="swipe_left_for_register">Deslize para a esquerda para registrar</string>
    <string name="login">Login</string>
    <string name="password">Senha</string>
    <string name="e_mail">Email</string>
    <string name="tag">Insira usuário e senha</string>
    <string name="swipe_right_for_login">Deslize para a direita para login</string>
    <string name="register">Registre-se</string>
    <string name="re_type_password">Digite a senha novamente</string>
    <string name="your_name">Nome completo</string>
</resources>